Apple Intermediate Codec (icod) is not supported in VLC.
When playing some .mov files with VLC 1.2 on a Mac running 10.7.2, the audio plays but an error is produced saying "VLC does not support the audio or video format 'icod'."
When playing some .mov files with VLC 1.2 on a Mac running 10.7.2, the audio plays but an error is produced saying "VLC does not support the audio or video format 'icod'."
Added attachment:
changed title from Error when Playing .mov Files with VLC 1.2 for Mac to Apple Intermediate Codec (icod) is not supported in VLC.
added Component::Decoders Type::feature + 1 deleted label
changed milestone to %Features paradize
commit a5d15eb6 Author: Jean-Baptiste Kempf jb@videolan.org Date: Sat May 18 17:38:45 2013 +0200
Avcodec: map ICOD
Close [#5567](https://code.videolan.org/videolan/vlc/-/issues/5567)
Original author: jb@videolan.org
added Status::fixed label
closed
commit e8022122 Author: Jean-Baptiste Kempf jb@videolan.org Date: Sat May 18 17:34:50 2013 +0200
Introduce ICOD fourCC
Ref [#5567](https://code.videolan.org/videolan/vlc/-/issues/5567)
Original author: jb@videolan.org
VideoLAN code repository instance