Introduce ICOD fourCC

Ref #5567